--- a/winterCollection.html
+++ b/winterCollection.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter Collection | SARA</title>
 
-    <link rel="stylesheet" href="components/componentHeader.css">
-    <link rel="stylesheet" href="components/componentFooter.css">
-    <link rel="stylesheet" href="CSS/winterCollection.css">
+    <link rel="stylesheet" href="./components/componentHeader.css">
+    <link rel="stylesheet" href="./components/componentFooter.css">
+    <link rel="stylesheet" href="./CSS/winterCollection.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700;800&display=swap" rel="stylesheet">
 
-    <script type="module" src="JavaScript/renderProducts.js"></script>
-    <script type="module" src="JavaScript/loaderComponent.js" defer></script>
-    <script src="JavaScript/mobileMenu.js" defer></script>
+    <script type="module" src="./JavaScript/renderProducts.js"></script>
+    <script type="module" src="./JavaScript/loaderComponent.js" defer></script>
+    <script src="./JavaScript/mobileMenu.js" defer></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
         <div class="container">
           <div class="cards"> 
             <div class="prodct-cart">
-                <img class="productIMG" src="MultiMedia/products imgs/jeans/jeannavy.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/products imgs/jeans/jeannavy.png" alt="product picture">
                 <h3 class="pTitle">jeans</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="prodct-cart">
-                <img class="productIMG" src="MultiMedia/products imgs/coats/coatred.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/products imgs/coats/coatred.png" alt="product picture">
                 <h3 class="pTitle">coats</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
@@ -42,28 +42,28 @@
             </div>
 
             <div class="prodct-cart">
-                <img class="productIMG" src="MultiMedia/products imgs/shoes/shoesgrena.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/products imgs/shoes/shoesgrena.png" alt="product picture">
                 <h3 class="pTitle">shoes</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="shoes.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG dress" src="MultiMedia/products imgs/dressreca.png" alt="product picture">
+                <img class="productIMG dress" src="./MultiMedia/products imgs/dressreca.png" alt="product picture">
                 <h3 class="pTitle">dresses</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="dresses.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG" src="MultiMedia/products imgs/bags/bagblack.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/products imgs/bags/bagblack.png" alt="product picture">
                 <h3 class="pTitle">Bags</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="bags.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG" src="MultiMedia/products imgs/jewellery/jewellery1.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/products imgs/jewellery/jewellery1.png" alt="product picture">
                 <h3 class="pTitle">jewellery</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
